crates/jp_cli/src/render/snapshots/jp_cli__render__tool__tests__format_args_json.snap
---
source: crates/jp_cli/src/render/tool_tests.rs
expression: result
---
 with arguments:

```json
{
  "path": "/tmp/test.txt"
}
```
