crates/jp_cli/src/render/snapshots/jp_cli__render__tool__tests__render_custom_arguments_after_approval.snap
---
source: crates/jp_cli/src/render/tool_tests.rs
expression: output
---
Calling tool ssh_run

custom-output

