crates/jp_cli/src/render/snapshots/jp_cli__render__tool__tests__render_result_truncated.snap
---
source: crates/jp_cli/src/render/tool_tests.rs
expression: output
---
line1
line2
 _(truncated to 2 lines)_
