crates/jp_cli/src/render/snapshots/jp_cli__render__tool__tests__render_tool_call_function_call.snap
---
source: crates/jp_cli/src/render/tool_tests.rs
expression: output
---
Calling tool cargo_check(package: "jp_cli")
