crates/jp_cli/src/render/snapshots/jp_cli__render__tool__tests__render_tool_call_json.snap
---
source: crates/jp_cli/src/render/tool_tests.rs
expression: output
---
Calling tool fs_read_file with arguments:

```json
{
  "path": "/tmp/test.txt"
}
```
